Fixed navbar and main page alignments

--- a/frontend/src/components/LoginForm.css
+++ b/frontend/src/components/LoginForm.css
@@ -1,6 +1,6 @@
 .login-form-inner {
   text-align: center;
-  margin-top: 60px;
+  margin-top: 40px;
 }
 
 .login-h1 {
