--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -10,15 +10,19 @@ nav {
   box-shadow: 4px 4px 0px #000000;
 }
 
+nav > .nav-link-header {
+  filter: drop-shadow(4px 0px #000000);
+  background-color: #000000;
+}
+
 .nav-logo {
   font-family: "Bebas Neue";
   font-size: 40px;
   text-decoration: underline;
-  padding: 12px 20px;
+  padding: 4px 20px;
   border: 3px solid black;
   background-color: black;
   color: white;
-  text-decoration: underline;
   cursor: pointer;
 }
 
@@ -30,21 +34,30 @@ nav {
   padding-top: 15px;
   padding-left: 0px;
   list-style: none;
-  background-color: inherit;
+  background-color: #6f5ba3;
   cursor: pointer;
 }
 
-.nav-links > li {
-  font-family: "Bebas Neue";
+.nav-links > .nav-links-li {
   padding: 0px 10px;
-  font-size: 20px;
   background-color: inherit;
-  color: white;
+  color: black;
+  text-decoration: none;
+}
+
+.nav-links-li > li {
+  font-family: "Bebas Neue";
+  font-size: 28px;
+  background-color: inherit;
 }
 
 .nav-links > li:hover {
   transform: scale(1.03);
   color: black;
+}
+
+.nav-links-signin-btn {
+  background-color: #6f5ba3;
 }
 
 .nav-singin-btn {
